--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,46 @@
   </head>
 
   <body>
+
+  <% if flash[:notice] %>
+      <div class="notification is-primary global-notification">
+        <p class="notice"><%= notice %></p>
+      </div>
+    <% end %>
+    <% if flash[:alert] %>
+      <div class="notification is-danger global-notification">
+        <p class="alert"><%= alert %></p>
+      </div>
+    <% end %>
+
+
+    <nav class="navbar">
+      <div class="navbar-brand">
+        <%= link_to root_path, class: "navbar-item is-centered" do %>
+          <h1 class="title is-5">Members Only</h1>
+        <% end %>
+        <div class="navbar-burger burger" data-target="navbarExample">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+      
+      <div id="navbarExample" class="navbar-menu">
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="field is-grouped">
+              <p class='control'>
+                <%= link_to 'New Post', new_message_path, class: "button is-info is-inverted" %>
+              </p>
+              <p class="control">
+                <%= link_to 'Log In', '#', class: "button is-primary is-inverted"%>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
     <%= yield %>
   </body>
 </html>
