add new message page

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,5 +1,21 @@
-<h1>New Message</h1>
+<div class="section">
+	<div class="container">
+		<div class="columns is-centered">
+			<div class="column is-half">
+				<h1 class="title">Create a new Tweeet</h1>
+					<%= render 'form', message: @message %>
+			</div>
+		</div>
+	</div>
+</div>
 
-<%= render 'form', message: @message %>
-
-<%= link_to 'Back', messages_path %>
+<nav class="navbar is-fixed-bottom">
+	<div class="navbar-menu">
+		<div class="navbar-item">
+			<div class="field is-grouped">
+				<p class="control">
+					<%= link_to 'Cancel', messages_path, class: "button is-dark" %>
+				</p>
+		</div>
+	</div>
+</nav>
