--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,13 +1,10 @@
 
 <%= simple_form_for(@message) do |f| %>
   <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
-  <div class="form-inputs">
-    <%= f.input :message %>
+  <div class="field">
+    <div class="control">
+      <%= f.input :message, label: "What is on your mind?", input_html: { class: "textarea" }, wrapper: false, label_html: { class: "label"}, placeholder: "Compose a new secret...", autofocus: true %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+  <%= f.button :submit, class: "button is-info" %>
 <% end %>
