--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -27,7 +28,7 @@
     <nav class="navbar">
       <div class="navbar-brand">
         <%= link_to root_path, class: "navbar-item is-centered" do %>
-          <h1 class="title is-5">Members Only</h1>
+          <h1 class="title is-5">MEMBERS ONLY</h1>
         <% end %>
         <div class="navbar-burger burger" data-target="navbarExample">
           <span></span>
