add user_id to messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
                 <%= link_to 'New Post', new_message_path, class: "button is-info is-inverted" %>
               </p>
               <p class="control">
-                <%= link_to 'Log In', '#', class: "button is-primary is-inverted"%>
+                <%= link_to 'Log In', new_user_session_path, class: "button is-primary is-inverted"%>
               </p>
             </div>
           </div>
