--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,11 @@
                 <%= link_to 'New Post', new_message_path, class: "button is-info is-inverted" %>
               </p>
               <p class="control">
-                <%= link_to 'Log In', new_user_session_path, class: "button is-primary is-inverted"%>
+                <% if user_signed_in?%>
+                  <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "button is-danger is-inverted" %>
+                <% else %>
+                  <%= link_to 'Log In', new_user_session_path, class: "button is-primary is-inverted"%>
+                <% end %>
               </p>
             </div>
           </div>
